--- a/example/resources/assets-index.yaml
+++ b/example/resources/assets-index.yaml
@@ -1,8 +1,9 @@
 asset_index:
-  mode: "ondisk"
-  assets:
+  infile:
+    localized_answer: "絕妙好辭"
+  ondisk:
     description:elaborate:example: "description_elaborate_example.html"
     description:illustrate:example: "description_illustrate_example.html"
     description:instruct:example: "description_instruct_example.html"
     description:verifyInput: "description_verify_input.html"
-    localized_answer: "絕妙好辭"
+    
