--- a/test/resources/vcs-compare/assets/file-index.yaml
+++ b/test/resources/vcs-compare/assets/file-index.yaml
@@ -1,6 +1,5 @@
 asset_index:
-  mode: "ondisk"
-  assets:
+  ondisk:
     dirtyAdd: "dirtyAdd.txt"
     dirtyModify: "dirtyModify.txt"
     resolveConflictAA: "resolveConflictAA.txt"
