--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "adm-zip": "^0.4.13",
     "fs-extra": "^8.0.0",
     "js-yaml": "^3.13.1",
+    "marked": "^0.7.0",
     "nodegit": "^0.24.3",
     "override-require": "^1.1.1",
     "vue": "^2.6.10"
