--- a/example/resources/assets-index.yaml
+++ b/example/resources/assets-index.yaml
@@ -1,6 +1,24 @@
 asset_index:
   infile:
     localized_answer: "絕妙好辭"
+    description:illustrate:example: |+2
+      .md
+      ![illustrate]({{ images/illustrate_illustrate }})  
+      這是一個關於圖解步驟的簡單範例。  
+      示範了將 "\{\{ iamges/illustrate_illustrate \}\}" 代換成相對路徑 "{{ images/illustrate_illustrate }}"<br>
+      如果使用 "$\{\{ images/illustrate_illustrate \}\}" 將會得到素材的內容本身(此處因為素材是圖片就略過示範)"  
+
+      如果想要跳脫地輸入 "\{\{\}\}" 的符號，必須在 "{" 前加入跳脫字元 "\\"，例如
+
+          \\{\\{
+
+      想要跳脫地輸入 "\\\{" 與 "\\\}"，只要重複跳脫字元 "\\" 就可以了，例如
+
+          \\\{  
+
+      或  
+
+          \\\}
   ondisk:
     description:elaborate:example: "description_elaborate_example.html"
     description:illustrate:example: "description_illustrate_example.html"
