Add configuration to generate remote repo for testing

--- a/test/resources/vcs-compare/assets/file-index.yaml
+++ b/test/resources/vcs-compare/assets/file-index.yaml
@@ -1,4 +1,7 @@
 asset_index:
+  infile:
+    update-master-1: "update-master-1 content"
+    force-update-master: "force-update-master content"
   ondisk:
     dirtyAdd: "dirtyAdd.txt"
     dirtyModify: "dirtyModify.txt"
