--- a/test/resources/vcs-compare/generate-remote-repo.yaml
+++ b/test/resources/vcs-compare/generate-remote-repo.yaml
@@ -6,6 +6,7 @@ repoSetups:
     repoArchiveName: "compare-vcs.zip"
   remote:
     workingPath: "remote-repo"
+    referenceStoreName: "remote-repo-ref"
     repoType: "remote"
 stages:
   - name: init-remote
@@ -37,23 +38,13 @@ stages:
         localSetupName: local
         remoteNickName: origin
         isForce: true
-  - name: push-tags
-    save:
-      - remote
-    actions:
-      - !git
-        repoSetupName: local
-        arguments:
-          - push
-          - origin
-          - "--tags"
   - name: update-master-only
     save:
       - remote
     actions:
-    - !writeFile:
+    - !writeFile
       sourceAssetIds:
-        - file/update-master-1
+        - $file/update-master-1
       destinationPaths:
         - local-repo/update-master-1
     - !stageAll
@@ -75,9 +66,9 @@ stages:
           - reset
           - "--hard"
           - "HEAD^"
-      - !writeFile:
+      - !writeFile
         sourceAssetIds:
-          - file/force-update-master
+          - $file/force-update-master
         destinationPaths:
           - local-repo/force-update-master
       - *commit
@@ -134,6 +125,7 @@ stages:
         arguments:
           - push
           - origin
+          - "-f"
           - "end-of-base"
   - name: change-tag-name
     save:
