Correct remote generation config; Implement test-utils comparing bare repos

--- a/test/resources/vcs-compare/generate-remote-repo.yaml
+++ b/test/resources/vcs-compare/generate-remote-repo.yaml
@@ -71,6 +71,8 @@ stages:
           - $file/force-update-master
         destinationPaths:
           - local-repo/force-update-master
+      - !stageAll
+        repoSetupName: local
       - *commit
       - *pushMaster
   - name: add-third-branch
