CheckpointStep need to assign an array of repo setup names

--- a/example/resources/levels/_test.yaml
+++ b/example/resources/levels/_test.yaml
@@ -15,7 +15,8 @@
       repoSetupName: local
       referenceName: clean
     - !checkpoint
-      repoSetupName: local
+      repoSetupNames:
+        - local
       checkpointName: kerker
     - !elaborate # elaborate this is an example
       descriptionId: "assets/description:elaborate:example"
