Add AllRepoCheckpointStep to save and load checkpoint for all repos in a level

--- a/example/resources/levels/_test.yaml
+++ b/example/resources/levels/_test.yaml
@@ -14,7 +14,7 @@
     - !verifyRepo
       repoSetupName: local
       referenceName: clean
-    - !checkpoint
+    - !partialCheckpoint
       repoSetupNames:
         - local
       checkpointName: kerker
