--- a/example/resources/levels-index.yaml
+++ b/example/resources/levels-index.yaml
@@ -1,5 +1,6 @@
 asset_index:
   infile:
+    main:course-name: "教學範例"
     main:section-1:name: "第一章: 範例章節"
     main:section-1:level-1-1: "第一關： git 本地操作教學範例"
     main:section-1:level-1-2: "第二關： git 遠端操作教學範例"
