--- a/example/resources/course/main.yaml
+++ b/example/resources/course/main.yaml
@@ -1,16 +1,24 @@
 !course
   id: "example-main"
-  nameKey: "levels/main:course-name"
+  nameKey: "levels/main.course-name"
   children:
     - !sequential-section
       id: "example-main-secion-1"
-      nameKey: "levels/main:section-1:name"
+      nameKey: "levels/main.section-1.name"
       children:
         - !level
           id: "example-main-level-1-1"
-          nameKey: "levels/main:level-1-1:name"
+          nameKey: "levels/main.level-1-1.name"
           configAssetId: "levels/local"
         - !level
           id: "example-main-level-1-2"
-          nameKey: "levels/main:level-1-2:name"
+          nameKey: "levels/main.level-1-2.name"
           configAssetId: "levels/remote"
+    - !sequential-section
+      id: "example-main-seciont-2"
+      nameKey: "levels/main.section-2.name"
+      children:
+        - !level
+          id: "example-main-level-2-1"
+          nameKey: "levels/main.level-2-1.name"
+          configAssetId: "levels/test"
